--- a/ticket.html
+++ b/ticket.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
+<link href="style.css" rel="stylesheet">
 
   </head>
   <body>
@@ -32,7 +33,12 @@
 <div class=" col m6 offset-m3">
 <div class="card">
 <div class="card-content">
-
+  <button onclick="myfunc()" class="btn waves-effect waves-light">PRINT TICKET</button>
+<script>
+function myfunc(){
+  window.print();
+}
+</script>
 TICKET DETAILS
 <BR><BR><BR><BR><BR><BR>
 </div>
