--- a/confirm.html
+++ b/confirm.html
@@ -11,6 +11,7 @@
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
 <link href="style.css" rel="stylesheet">
+<link href="https://cdn.rawgit.com/hemangsk/platform-ticket-monitoring/master/style.css" rel="stylesheet">
 
 
   </head>
