--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
-<link href="style.css" rel="stylesheet">
+<link href="https://cdn.rawgit.com/hemangsk/platform-ticket-monitoring/master/style.css" rel="stylesheet">
   </head>
   <body>
     <main>
