--- a/verify.html
+++ b/verify.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
+<link href="https://cdn.rawgit.com/hemangsk/platform-ticket-monitoring/master/style.css" rel="stylesheet">
 
   </head>
   <body>
@@ -34,8 +35,8 @@
 
     <div class="row">
         <div class="input-field col s12">
-          <input  id="first_name" type="text" class="validate">
-          <label for="first_name">ID</label>
+          <input  id="id" type="text" class="validate">
+          <label for="id">ID</label>
         </div>
 
       </div>
@@ -52,7 +53,15 @@
 <div class="card-content">
 
 TICKET DETAILS
-<BR><BR><BR><BR><BR><BR>
+<div class="name"></div>
+
+<div class="Quantity"></div>
+
+<div class="final_rate"></div>
+
+<div class="discount"></div>
+
+<hr></hr>
 </div>
 
 </div>
